[gd_scene load_steps=2 format=3 uid="uid://dfbrijk8t2e21"]

[ext_resource type="Script" path="res://CombatBox.gd" id="1_3vhwe"]

[node name="CombatBox" type="Node2D"]
script = ExtResource("1_3vhwe")

[node name="AttackButton" type="Button" parent="."]
offset_right = 65.0
offset_bottom = 31.0
toggle_mode = true
text = "Attack"

[node name="DefendButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -65.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Defend"

[connection signal="toggled" from="AttackButton" to="." method="_on_attack_button_toggled"]
[connection signal="button_up" from="DefendButton" to="." method="_on_defend_button_button_up"]
